# PhysicsCPP

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md
core/: CMakeLists.txt
core/assets/images/: demonstration_drag.xcf  person.xcf  showcase.xcf
core/assets/shaders/: circle.frag
core/assets/ui/: button.xcf  button_pressed.xcf  dropdown_head.xcf  dropdown_head_expanded.xcf  dropdown_option.xcf  dropdown_option_last.xcf  slider_base.xcf
core/include/: Physics.hpp
core/include/Physics/Config/: English  Font  Greek  TextureButton  TextureButtonPressed  TextureDropdownHead  TextureDropdownHeadExpanded  TextureDropdownOption  TextureDropdownOptionLast
core/include/Physics/Physics/: Body.hpp  BodyHandler.hpp  FrictionCoefficients.hpp  KinematicBody.hpp  Materials.hpp  StaticBody.hpp  Units.hpp
core/include/Physics/System/: AABB.hpp  Application.hpp  Arrow.hpp  Box.hpp  Color.hpp  Colors.hpp  Exception.hpp  Font.hpp  Language.hpp  MessageBox.hpp  Mouse.hpp  NonCopyable.hpp  RectangleShape.hpp  Renderer.hpp  Shaders.hpp  Sizes.hpp  Texture.hpp  Textures.hpp  Tools.hpp  TranslationControl.hpp  Value.hpp  Vector2.hpp
core/include/Physics/UI/: Button.hpp  Dropdown.hpp  HGrid.hpp  HLayout.hpp  Image.hpp  Label.hpp  LabeledImage.hpp  Layout.hpp  Slider.hpp  TextureButton.hpp  UIElement.hpp  UIElementAbstract.hpp  VGrid.hpp  VLayout.hpp  Value.hpp
core/include/Physics/UI/Textured/: Button.hpp  Dropdown.hpp
core/src/Physics/: Body.cpp  BodyHandler.cpp  FrictionCoefficients.cpp  FrictionCoefficients.hpp  KinematicBody.cpp  Material.hpp  Materials.cpp  Units.cpp
core/src/System/: AABB.cpp  Application.cpp  Arrow.cpp  Color.cpp  Mouse.cpp  Shaders.cpp  Textures.cpp
core/src/UI/: UIElementAbstract.cpp
demo/: BackgroundDemo.hpp  CMakeLists.txt  ConfigDemo.hpp  DragDemo.hpp  FrictionDemo.hpp  Showcase.hpp  ShowcaseSelector.hpp  TitleScreen.hpp  main.cpp
docs/: Doxyfile  Doxyfile.in
docs/html/: AABB_8hpp_source.html  Application_8hpp_source.html  Arrow_8hpp_source.html  BackgroundDemo_8hpp_source.html  BodyHandler_8hpp_source.html  Body_8hpp_source.html  Box_8hpp_source.html  Button_8hpp_source.html  Color_8hpp_source.html  Colors_8hpp_source.html  ConfigDemo_8hpp_source.html  Dropdown_8hpp_source.html  Exception_8hpp_source.html  Font_8hpp_source.html  HGrid_8hpp_source.html  HLayout_8hpp_source.html  Image_8hpp_source.html  KinematicBody_8hpp_source.html  (+128 more)
(+170 files in other folders)
